Closed Bug 840611 Opened 11 years ago Closed 11 years ago

Fix build on big endian archs after bug 834242

Categories

(Core :: JavaScript Engine, defect)

21 Branch
PowerPC
OpenBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla21

People

(Reporter: gaston, Assigned: gaston)

Details

Attachments

(1 file)

Atm m-c doesnt build for me on ppc32/openbsd, but that looks unrelated to that diff :

 5:03.08 /home/landry/src/mozilla-central/js/src/jsatom.cpp: In function 'bool js::XDRAtom(js::XDRState<mode>*, js::MutableHandleAtom)':
 5:03.08 /home/landry/src/mozilla-central/js/src/jsatom.cpp:519:42: error: no matching function for call to 'AtomizeChars(JSContext*&, jschar*&, uint32_t&)'
 5:03.08 /home/landry/src/mozilla-central/js/src/jsatom.cpp:519:42: note: candidate is:
 5:03.09 /home/landry/src/mozilla-central/js/src/jsatom.cpp:406:1: note: template<js::AllowGC allowGC> JSAtom* js::AtomizeChars(JSContext*, const jschar*, size_t, js::InternBehavior)


Bug 834242 apparently missed the Big Endian side in jastom.cpp line 516, adding <CanGC> there fixes the build for me. Patch in a few.
Assignee: general → landry
Attachment #712999 - Flags: review?(terrence)
Comment on attachment 712999 [details] [diff] [review]
Add missing <CanGC> template for BE archs

Review of attachment 712999 [details] [diff] [review]:
-----------------------------------------------------------------

Thank you for the fix!
Attachment #712999 - Flags: review?(terrence) → review+
Version: Trunk → 21 Branch
https://hg.mozilla.org/mozilla-central/rev/57dc48d44b60
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: