Bug 840611: Fix build on BE archs (ie ppc) after bug 834242. r=terrence